# formal-regex

./: .clang-format  CMakeLists.txt  README.md  main.cpp  nfa.h  solution.h
.github/workflows/: main.yml
nfa/: CMakeLists.txt  nfa.cpp  nfa.h
rpn/: CMakeLists.txt  rpn.cpp  rpn.h
solution/: CMakeLists.txt  solution.h
tests/: CMakeLists.txt  test_nfa.cpp  test_rnp.cpp  test_solution.cpp
